--- a/angular-todo/src/app/app.component.html
+++ b/angular-todo/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="main">
   <h1>My To Do List</h1>
+  <app-login></app-login>
   <label for="addItemInput">What would you like to do today?</label>
   <input placeholder="search item" type="text" class="lg-text-input" />
   <input [(ngModel)]="description" #newItem placeholder="add an item" (keyup.enter)="addItem()" class="lg-text-input"
