feat: update CRUD

--- a/angular-todo/src/app/app.component.html
+++ b/angular-todo/src/app/app.component.html
@@ -1,37 +1,1 @@
-<div class="main">
-  <h1>My To Do List</h1>
-  <app-login></app-login>
-  <label for="addItemInput">What would you like to do today?</label>
-  <input placeholder="search item" type="text" class="lg-text-input" />
-  <input [(ngModel)]="description" #newItem placeholder="add an item" (keyup.enter)="addItem()" class="lg-text-input"
-    id="addItemInput" />
-  <select [(ngModel)]="status" class="mainSelect" name="mainSelect" id="mainSelect" #mainSelect>
-    <option value="">Please, choose status of your task</option>
-    <option value="unimportant">unimportant</option>
-    <option value="important">important</option>
-  </select>
-  <button class="btn-primary" (click)="addItem()">Add</button>
-  <div class="btn-wrapper">
-    <button class="btn btn-menu" [class.active]="filter == 'all'" (click)="filter = 'all'">
-      All
-    </button>
-
-    <button class="btn btn-menu" [class.active]="filter == 'important'" (click)="filter = 'important'">
-      Important
-    </button>
-
-    <button class="btn btn-menu" [class.active]="filter == 'unimportant'" (click)="filter = 'unimportant'">
-      Unimportant
-    </button>
-
-    <button class="btn btn-menu" [class.active]="filter == 'done'" (click)="filter = 'done'">
-      Done
-    </button>
-  </div>
-  <h2>Tasks: {{filterItems.length}}</h2>
-  <ul>
-    <li *ngFor="let item of filterItems">
-      <app-item (remove)="removeItem(item)" [item]="item"></app-item>
-    </li>
-  </ul>
-</div>
+<router-outlet></router-outlet>
