--- a/angular-todo/src/app/login/login.component.html
+++ b/angular-todo/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <input type="email" placeholder="enter your email" [(ngModel)]="loginObj.email">
-  <input type="password" placeholder="enter your password" [(ngModel)]="loginObj.password">
-  <button (click)="login()">Log in</button>
+  <input class="lg-text-input" type="email" placeholder="enter your email" [(ngModel)]="loginObj.email">
+  <input class="lg-text-input" type="password" placeholder="enter your password" [(ngModel)]="loginObj.password">
+  <button class="btn-primary" (click)="login()">Log in</button>
 </div>
