feat: add logout and console log for user info

--- a/angular-todo/src/app/dashboard/dashboard.component.html
+++ b/angular-todo/src/app/dashboard/dashboard.component.html
@@ -33,4 +33,5 @@
       <app-item (remove)="removeItem(item)" [item]="item"></app-item>
     </li>
   </ul>
+  <button class="btn" (click)="logout()">Log out</button>
 </div>
