feat: wow! finish

--- a/angular-todo/src/app/app.component.html
+++ b/angular-todo/src/app/app.component.html
@@ -1,1 +1,7 @@
+<div class="wrapper">
+  <button class="btn" (click)="goLogin()">Login Page</button>
+  <button class="btn" (click)="goDashboard()">Dashboard</button>
+  <button class="btn" (click)="goAbout()">About</button>
+  <button class="btn" (click)="goLogout()">Log out </button>
+</div>
 <router-outlet></router-outlet>
